@@ -4,6 +4,9 @@ January 5, 2006: Happy New Year!
   - Bugfix: after remapping the controls the old keys used to continue to
     perform the same actions.
   - Allow up to two keys bound to the same action.
+  - Use 800x600 by default; if your computer is fast enough, you can change to
+    a better video mode; if not, give a better first impression by avoiding
+    sluggishness.
 
 December 25, 2006: Released version 0.9.3: the Christmas release.
 
